# sdata-experiments

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
architecture/: index.html
bendingtest/: CHANGELOG.md  sdata-bending-specimens.ttl  sdata-bending.ttl
bendingtest/examples/: README.md
compressiontest/: CHANGELOG.md  sdata-compression-specimens.ttl  sdata-compression.ttl
core/: CHANGELOG.md  sdata-quantities.ttl  sdata-testdata.ttl
deployment/: index.html
docs/: architecture.md  deployment.md  getting-started.md  index.md  validation.md
docs/modules/: bendingtest.md  compressiontest.md  core.md  fatiguetest.md  quantities.md  shapes.md  tensiletest-dp600.md  tensiletest-result.md  tensiletest.md  vocabularies.md
examples/: dp600.ttl
fatiguetest/: CHANGELOG.md  sdata-fatigue-specimens.ttl  sdata-fatigue.ttl
getting-started/: index.html
modules/bendingtest/: index.html
scripts/: check_ttl.py
search/: search_index.json
shapes/: CHANGELOG.md  sdata-bending-shapes.ttl  sdata-compression-shapes.ttl  sdata-core-shapes.ttl  sdata-fatigue-shapes.ttl  sdata-shapes.ttl  sdata-tensile-shapes.ttl
site/: 404.html  index.html  sitemap.xml
src/: list_din50125_specimens.py  query_flat_tensile_specimens.py
tensiletest/: CHANGELOG.md  sdata-tensile-specimens.ttl  sdata-tensile.ttl
tests/: test_smoke.py
validation/: index.html
vocabularies/: CHANGELOG.md  iso6892-1-skos.ttl  material-models.ttl  sdata_tto3.0.3.ttl  specimen-shapes.ttl  test-standards.ttl  tto3.0.3.ttl
(+24 files in other folders)
