[project]
name = "sdata-testdata"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "rdflib>=7.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pymdown-extensions>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
